# arena

./: .gitignore  CHANGELOG.md  METHODOLOGY.md  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  scorecard.yml
docs/: ARCHITECTURE.md  agent-benchmark-protocol.md  agent-engine-benchmarks-2026.md
harbor/: README.md  pyproject.toml  run.sh
harbor/arena_harbor/: __init__.py  agents.py  base.py  command.py  metrics.py  spec.py  specs_builtin.py
harbor/specs/: byo.example.toml
harbor/tests/: test_agents.py  test_command.py  test_metrics.py  test_spec.py
site/: index.html  style.css  vercel.json
site/paper/: index.html
site/spec/: index.html
src/: baseline.ts  cli.ts  orchestrator.ts  parse.ts  pricing.ts  report.ts  stats.ts  summary.ts  workspace.ts
src/adapters/: base.ts  claude-code.ts  gemini.ts  index.ts  mock.ts  oxagen.ts  stella.ts
test/: adapters.test.ts  baseline.test.ts  parse.test.ts  pipeline.test.ts
