[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arena-harbor"
version = "0.1.0"
description = "Harbor adapter to benchmark your coding agent against Claude Code, Gemini, Codex and others under the official verifier"
readme = "README.md"
# Harbor itself requires Python >= 3.12, so this adapter does too.
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Oxagen", email = "dev@oxagen.ai" }]
keywords = ["benchmark", "harbor", "swe-bench", "ai-agents", "coding-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
# Built and tested against 0.6.x; the range admits later 0.x releases the
# spec-driven surface has stayed compatible with. Tighten if Harbor breaks API.
dependencies = [
  "harbor>=0.6,<0.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/oxageninc/arena"
Repository = "https://github.com/oxageninc/arena"

[tool.setuptools]
packages = ["arena_harbor"]

[tool.setuptools.package-data]
arena_harbor = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
